Update support for records and sealed types